# alien-shooter-auto-mapper

./: .gitignore  CMakeLists.txt  CMakePresets.json  builder.bat  implementation_plan.md  interior_automation_plan.md  pack_nuitka.bat  pack_nuitka.py  pyproject.toml  run_test.bat  test.json
_pre-demo/: AS1_MAP.bt  as1_map_unpack.py  empty.map  floor_celling.json  lab_wall_long.json  room_sample.json  standard_wall_set.tga  unpack_map.bat  wall_algorithm_test.py  wall_demo.py
_pre-demo/decoration/: Incubator.json  desks.json  desks_computer_↖.json  desks_computer_↗.json  desks_computer_↘.json  desks_computer_↙.json
_pre-demo/door/: door_lab_wall.json  door_standard_wall_open.json
_pre-demo/wall_celling_floor/: celling.json  celling_back.md  celling_half.json  celling_standard.json  floor_celling_only.json  wall_mixed.json
_pre_docs/: automapper.md  project_docs.md
_ui_html_demo/: ui.md  ui_prototype.html
_ui_jsons/: bad_celling_square.json  door_standard_wall_open.json  door_test.json  good_celling.json
doc/: coordinate_systems.md  incubator_alignment_fix.md
src/app/: __init__.py  config.py  drawable_parts.py  logger.py  main.py  main_ui.py.bak  project_io.py  version.py  wall_profiles.py
src/app/binding/: __init__.py  client.py  dll_registry.py  structures.py
src/app/editor/: __init__.py  decorations.py  drawable_parts.py  wall_profiles.py
src/app/i18n/: __init__.py  locale.py  text_keys.py
src/app/i18n/locales/: en_US.json  zh_CN.json
src/app/legacy/: __init__.py
src/app/project/: __init__.py  data.py  io.py
src/app/ui/: colors.py  main_window.py
src/app/ui/canvas/: __init__.py  viewport.py
src/app/ui/panels/: decoration_shelf.py  inspector.py  theme_shelf.py
src/app/ui/styles/: __init__.py  dark_theme.qss
src/app/ui/tools/: __init__.py  drawing_modes.py  drawing_tool.py  drawing_toolbar.py
src/app/ui/tools/eraser/: __init__.py  config.py  controller.py  geometry.py  properties_widget.py
src/auto_mapper/: api.cpp  api.h  main.cpp  version.rc.in
src/auto_mapper/common/: config.cpp  config.h  logger.cpp  logger.h  version.h
src/auto_mapper/core/: dir_randomizer.cpp  dir_randomizer.h  door_builder.cpp  door_builder.h  geometry.cpp  geometry.h  randomizer.cpp  randomizer.h  wall_builder.cpp  wall_builder.h
src/auto_mapper/core/indoor_decorations/: desk_builder.cpp  desk_builder.h  incubator_builder.cpp  incubator_builder.h
src/auto_mapper/io/: map_writer.cpp  map_writer.h  templates.h
src/python_layer/: main_ui.py
tests/: manual_test.cpp  manual_test_config.cpp  manual_test_map_writer.cpp  test_desk_builder.cpp  test_dir_randomizer.cpp  test_door_builder.cpp  test_geometry.cpp  test_incubator_builder.cpp  test_map_writer.cpp  test_randomizer.cpp  test_wall_builder.cpp
tests/golden/: door_builder.gold.json  door_builder.gold.map  floor_builder.gold.json  floor_builder.gold.map  incubator_builder_gold.json  incubator_builder_gold.map  wall_builder.gold.json  wall_builder.gold.map
tests/utils/: test_utils.h
